# xhec-mlops-2025-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.app  Dockerfile.app.pip  Dockerfile.mlflow  Dockerfile.prefect  Dockerfile.training  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  start_docker.ps1  start_docker.sh  start_training.ps1  start_training.sh  test_api.sh
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/: deployment.py
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: main.py  model_training.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: model.pkl
tests/: test_environment.py
