[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Thibaud", email = "thiba@email.com" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.10, <3.12"
dependencies = [
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "mlflow>=2.8.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.0.0",
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "jupyter>=1.0.0",
]
